:books: docs: Adding endpoinst documentation of listing all users and listing specific user
